Fix code snippet overflow

--- a/styles/objects/_article.scss
+++ b/styles/objects/_article.scss
@@ -65,7 +65,7 @@
         object-fit: contain;
         width: 100%;
         height: 100%;
-        @include beautyful-shadow;
+        //@include beautyful-shadow;
 
         &--shrink{
             max-height: 320px;
